fix scrollbar thumb color on hover

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,6 @@ body {
 }
 *::-webkit-scrollbar-thumb:hover {
   background-color: rgb(var(--fg));
-  border: 0.25rem solid rgb(var(--fg2));
 }
 img {
   user-select: none;
